VIEW AVAILABLE GOODS!
GOODS NA POOOOO

--- a/ProjectFolder/views/home.hbs
+++ b/ProjectFolder/views/home.hbs
@@ -12,7 +12,7 @@
                     <p>{{this.location}}</p>
                 </div>
                 <div class="main-page-actions">
-                    <a href="/view_available_page" class="main-view-available">View Availability</a>
+                    <a href="/view_available_page?arena={{this.name}}" class="main-view-available">View Availability</a>
                     <a href="/reserve_seat_page" class="main-reserve-seat" data-arena="{{this.name}}" onclick="reserveSeat(this)">Reserve Seat</a>
                 </div>
             </div>
