--- a/ProjectFolder/views/reserve_seat_page.hbs
+++ b/ProjectFolder/views/reserve_seat_page.hbs
@@ -59,7 +59,7 @@
                     <button class="reserve-seat reserve-available" id="C1" onclick="handleSeatClick(this)">C1</button>
                     <button class="reserve-seat reserve-available" id="C2" onclick="handleSeatClick(this)">C2</button>
                     <button class="reserve-seat reserve-available" id="C3" onclick="handleSeatClick(this)">C3</button>
-                    <button class="reserve-seat reserve-available" id="C4" onclick="handleSeatClick(this)">C4"></button>
+                    <button class="reserve-seat reserve-available" id="C4" onclick="handleSeatClick(this)">C4</button>
                     <button class="reserve-seat reserve-available" id="C5" onclick="handleSeatClick(this)">C5</button>
                     <button class="reserve-seat reserve-available" id="C6" onclick="handleSeatClick(this)">C6</button>
                 </div>
