--- a/ProjectFolder/views/see_reservation_page.hbs
+++ b/ProjectFolder/views/see_reservation_page.hbs
@@ -47,6 +47,10 @@
                 return new Date(date).toLocaleTimeString('en-US', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
             }
 
+            function formatDate(date) {
+                return new Date(date).toLocaleDateString('en-US');
+            }
+
             function displayTickets() {
                 ticketContainer.innerHTML = '';
                 const start = (currentPage - 1) * ticketsPerPage;
@@ -72,7 +76,8 @@
                                 </div>
                             </div>
                             <div class="see-reservation-dates">
-                                <h2>Date of Request: ${new Date(ticket.reservedAt).toLocaleDateString('en-US')}</h2>
+                                <h2>Date of Request: ${formatDate(ticket.reservedAt)}</h2>
+                                <h2>Selected Reservation Date: ${formatDate(ticket.reservationStart)}</h2> <!-- Added selected date -->
                                 <h2>Reservation Date & Time: ${formatTime(ticket.reservationStart)} - ${formatTime(ticket.reservationEnd)}</h2>
                             </div>
                             ${!ticket.removed ? `<a href="/modify_reservation_page/${ticket._id}?ref=see_reservation" class="see-reservation-modify-reservation">
