--- a/ProjectFolder/views/login_page.hbs
+++ b/ProjectFolder/views/login_page.hbs
@@ -22,7 +22,7 @@
 
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" name="rememberMe"> Remember Me
+                    <input type="checkbox" name="rememberMe" id="rememberMe"> Remember Me
                 </label>
             </div>
                 
