about page done

--- a/ProjectFolder/views/partials/header.hbs
+++ b/ProjectFolder/views/partials/header.hbs
@@ -1,6 +1,7 @@
 <header class="{{headerClass}}">
     <nav class="{{navClass}}">
         <a href="/">HOME</a>
+        <a href="/about">ABOUT</a>
         <a href="/see_reservation_page">SEE RESERVATION</a>
         <a href="/#reserve">RESERVE A SEAT</a> 
         <a href="/profile_page">PROFILE</a>
