--- a/ProjectFolder/public/styles.css
+++ b/ProjectFolder/public/styles.css
@@ -165,6 +165,122 @@ body {
     transform: scale(1.05);
 }
 
+/* about.hbs */
+
+.about-page-header {
+    position: relative;
+    height: 25vh;
+    width: 100%;
+    color: white; 
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center;
+    text-align: center;
+}
+
+.about-page-header h1 {
+    font-family: 'Montserrat';
+    margin-bottom: 0.5rem;
+}
+
+.about-page-header h4 {
+    font-family: 'Montserrat';
+    font-weight: normal;
+    margin-top: 0;
+    border-bottom: 1px solid white;
+    padding-bottom: 0.5rem;
+    display: inline-block;
+    width: 55%;
+}
+
+.about-page-navbar {
+    position: absolute;
+    top: 0;
+    padding: 4rem 25rem 0 0;
+    display: flex;
+    justify-content: center;
+    gap: 2.75rem;
+}
+
+.about-page-navbar a {
+    color: white; 
+    text-decoration: none; 
+    font-weight: bold; 
+    font-size: 1rem;
+    transition: transform 0.2s ease;
+}
+
+.about-page-navbar a:hover {
+    transform: scale(1.05);
+}
+
+.about-page-registerlogin a {
+    position: relative;
+    bottom: 0.5rem;
+    left: 25rem;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
+    transition: transform 0.2s ease;
+    display: inline-block;
+}
+
+.about-page-registerlogin a:hover {
+    transform: scale(1.05);
+}
+
+.about-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    width: 100%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.about-content h1 {
+    font-family: 'Montserrat';
+    margin-top: 0;
+    font-size: 24px;
+    text-align: center;
+}
+
+.about-content p {
+    font-family: 'Montserrat';
+    margin-top: 0;
+    font-size: 16px;
+    text-align: center;
+}
+
+.packages-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+.packages-table th,
+.packages-table td {
+    font-family: 'Montserrat';
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.packages-table th {
+    font-family: 'Montserrat';
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.packages-table tr:hover {
+    font-family: 'Montserrat';
+    background-color: #f1f1f1;
+}
+
 /* profile_page.html */
 
 .profile-page-header {
