--- a/ProjectFolder/views/home.hbs
+++ b/ProjectFolder/views/home.hbs
@@ -6,7 +6,7 @@
     <div class="main-page-content">
         <div class="main-page-stadiumcontainer">
             <div class="main-page-stadiumcontent">
-                <img src="{{this.imageURL}}" alt="{{this.name}}" class="main-page-stadiumimage">
+                <img src="{{this.imageUrl}}" alt="{{this.name}}" class="main-page-stadiumimage">
                 <div class="main-page-stadiuminfo">
                     <h2>{{this.name}}</h2>
                     <p>{{this.location}}</p>
